# microgrid-dispatch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: pipeline.yaml
configs/agent/: default.yaml
configs/cleaning/: default.yaml
configs/data/: elia.yaml  gefcom2014.yaml
configs/features/: default.yaml
configs/forecast/: default.yaml
configs/model/: lstm.yaml
configs/optimize/: default.yaml
configs/rl/: default.yaml  ppo.yaml  smoke.yaml
configs/scenario/: price_spike.yaml  winter_weekday.yaml  winter_weekend_low_load.yaml
configs/system/: default.yaml
docs/tasks/: 01-data-pipeline.md  02-forecast-lstm.md  03-nsga3-dispatch.md  04-drl-dispatch.md  05-patchtst.md  06-data-agent.md  _TEMPLATE.md
models/comparison/: comparison.json
models/dispatch_2024-11-15/: solution.json
models/load_lstm/: DONE  history.csv  metrics.json
models/rl_sac/: episodes.csv  eval.csv  train_summary.json
models/rl_smoke/: episodes.csv  eval.csv  train_summary.json
models/solar_lstm/: DONE  history.csv  metrics.json
models/wind_lstm/: DONE  history.csv  metrics.json
scripts/: ask_data.py  build_dataset.py  compare_dispatch.py  download_data.py  explore_data.py  export_forecasts.py  load_to_db.py  optimize_dispatch.py  train_forecast.py  train_rl.py
sql/analysis/: dispatch_method_tradeoffs.sql  dispatch_robustness.sql  forecast_error_by_hour.sql  (+5 more)
tests/: conftest.py  test_agent.py  test_alignment.py  test_cleaning.py  test_features.py  test_forecast.py  test_optimize.py  test_rl.py  test_scenarios.py  test_sql_layer.py
(+297 files in other folders)
