[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microgrid"
version = "0.1.0"
description = "Microgrid forecasting-optimization-RL dispatch pipeline (NSGA-III / DRL)"
requires-python = ">=3.10"
dependencies = []  # see requirements.txt (pinned)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run excludes slow scenario solves; full run: `pytest -m slow`.
addopts = "-q -m 'not slow'"
markers = [
    "slow: heavy end-to-end runs (full/reduced NSGA-III solves); excluded by default",
    "db: SQL-layer tests needing a live PostgreSQL; self-skip when no DB is reachable",
]
